--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           go-version: ^1.19
       - name: Build app for Linux
-        run: go build -o amacoonServices
+        run: go build -o amacoonServices cmd/server/main.go 
       - name: Upload binary to Linux via SSH
         uses: appleboy/scp-action@master
         with:
