--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,14 @@ jobs:
           go-version: ^1.19
       - name: Build app for Linux
         run: go build -o amacoonServices cmd/server/main.go 
-      - name: Upload binary to Linux via SSH
-        uses: appleboy/scp-action@master
+      - name: Upload binary to Linux via FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.1.1
         with:
-          host: ftp.catclubsystem.com
+          server: ftp.catclubsystem.com
           username: catclubsystem
           password: 2010mainecoon2010
-          port: 22
-          source: ./amacoonServices
-          target: /home/catclubsystem/amacoonservice
+          local-dir: ./
+          remote-dir: /home/catclubsystem/amacoonservice
       - name: Execute app on Linux via SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
