--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -25,3 +25,10 @@ jobs:
         context: .
         push: true
         tags: scuba13/amacoon_service:latest
+
+      - name: Trigger Deploy to VPS
+      uses: peter-evans/repository-dispatch@v1
+      with:
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        repository: scuba13/AmacoonDocker
+        event-type: new_docker_image
