--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -27,6 +27,7 @@ jobs:
         aws lightsail push-container-image --service-name amacoon \
         --label amacoon-service \
         --image amacoon-service
+        --debug
 
     - name: Trigger Deploy to AWS Lightsail
       uses: peter-evans/repository-dispatch@v1
