--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -29,11 +29,16 @@ jobs:
     - name: Build Docker image
       run: docker build -t amacoon-service .
 
-    - name: Push Docker image to Lightsail
+    - name: Push Docker image to Lightsail and save image reference
+      id: push_image
       run: |
-        aws lightsail push-container-image --service-name amacoon \
-        --label amacoon-service \
-        --image amacoon-service
+        OUTPUT=$(aws lightsail push-container-image --service-name amacoon --label amacoon-service --image amacoon-service)
+        IMAGE_REF=$(echo "$OUTPUT" | grep 'Refer to this image as' | awk '{print $6}')
+        echo "::set-output name=image_ref::$IMAGE_REF"
+
+    
+    - name: Use image reference
+      run: echo "The image reference is ${{ steps.push_image.outputs.image_ref }}"
 
     - name: Trigger Deploy to AWS Lightsail
       uses: peter-evans/repository-dispatch@v1
@@ -41,3 +46,5 @@ jobs:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         repository: scuba13/AmacoonDocker
         event-type: new_docker_image
+        client-payload: '{"image_ref": ${{ steps.push_image.outputs.image_ref }}, "service": "amacoonservice"}'
+
