--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -8,33 +8,35 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-
+      
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      
+            
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      
+            
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build Docker image
-        run: docker build -t amacoon-service .
-        
-      - name: Tag Docker image
-        run: docker tag amacoon-service:latest 222377488320.dkr.ecr.us-east-1.amazonaws.com/amacoon:service
       
+      - name: Set environment variables
+        id: vars
+        run: |
+          echo "::set-output name=ecr_registry::${{ steps.login-ecr.outputs.registry }}"
+          echo "::set-output name=image_repo::amacoon"
+          echo "::set-output name=image_tag::service"
       
+      - name: Build and tag Docker image
+        run: docker build -t ${{ steps.vars.outputs.ecr_registry }}/${{ steps.vars.outputs.image_repo }}:${{ steps.vars.outputs.image_tag }} .
+              
       - name: Push Docker image to ECR
-        run: docker push 222377488320.dkr.ecr.us-east-1.amazonaws.com/amacoon:service
-    
-
+        run: docker push ${{ steps.vars.outputs.ecr_registry }}/${{ steps.vars.outputs.image_repo }}:${{ steps.vars.outputs.image_tag }}
+      
       - name: Trigger Deploy to AWS Lightsail
         uses: peter-evans/repository-dispatch@v1
         with:
