--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,12 @@
 db:
   username: catclubsystem
   password: 2010mainecoon2010
-  host: mysql.catclubsystem.com
+  # host: mysql.catclubsystem.com
+  host: ls-ad0ef4e184e7a556c4e988f165f81bdb159f5185.cpx4ifio97ko.us-east-1.rds.amazonaws.com
   port: 3306
-  name: catclubsystem
-mongodb:
-  username: amacoonservice
-  password: 2010mainecoon2010
-  #host: mongo
-  host: 191.252.210.141
-  port: 27017
-  name: amacoon
+  name: dbcatclubsystem
 server:
   port: 8080
+aws:
+  S3AwsAccessKeyId: AKIA4R4F43U6FT2QGREN
+  S3AwsSecretAccessKey: 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
