--- a/config.local.yaml
+++ b/config.local.yaml
@@ -17,3 +17,5 @@ smtp:
   password: Sistema@0013
   systemEmail: sistema@catclubsystem.com
   adminEmail: scuba13@hotmail.com
+jwt:
+  secret: RagnarPitoco
