--- a/config.local.yaml
+++ b/config.local.yaml
@@ -10,8 +10,10 @@ server:
 aws:
   S3AwsAccessKeyId: AKIA4R4F43U6FT2QGREN
   S3AwsSecretAccessKey: 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
+  bucket: amacoondocs
 smtp:
-  host: smtp.kinghost.net
+  # host: smtp.kinghost.net
+  host: smtp.catclubsystem.com
   port: 587
   username: sistema@catclubsystem.com
   password: Sistema@0013
