--- a/config.local.yaml
+++ b/config.local.yaml
@@ -6,14 +6,13 @@ db:
   name: dbcatclubsystem
 server:
   port: 8080
-  host: localhost
+  host: localhost:8080
 aws:
   S3AwsAccessKeyId: AKIA4R4F43U6FT2QGREN
   S3AwsSecretAccessKey: 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
   bucket: amacoondocs
 smtp:
-  # host: smtp.kinghost.net
-  host: smtp.catclubsystem.com
+  host: smtp.kinghost.net
   port: 587
   username: sistema@catclubsystem.com
   password: Sistema@0013
