--- a/config.local.yaml
+++ b/config.local.yaml
@@ -1,9 +1,10 @@
 db:
   username: catclubsystem
   password: 2010mainecoon2010
-  host: ls-ad0ef4e184e7a556c4e988f165f81bdb159f5185.cpx4ifio97ko.us-east-1.rds.amazonaws.com
-  port: 3306
+  host: 127.0.0.1
+  port: 5432
   name: dbcatclubsystem
+
 server:
   port: 8080
   host: localhost:8080
