--- a/config.local.yaml
+++ b/config.local.yaml
@@ -1,7 +1,8 @@
 db:
   username: catclubsystem
   password: 2010mainecoon2010
-  host: 127.0.0.1
+  host: db
+  # host: 127.0.0.1
   port: 5432
   name: dbcatclubsystem
 
