--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - meu-novo-db-volume:/var/lib/postgresql/data
+      - postgress:/var/lib/postgresql/data
 
   app:
     build:
@@ -21,8 +21,6 @@ services:
       - "8080:8080"  # Mapear a porta do container para a porta do host
     depends_on:
       - db  # Garantir que o serviço db seja iniciado antes da aplicação
-    # environment:
-    #   - DATABASE_URL=postgres://catclubsystem:2010mainecoon2010@db/dbcatclubsystem  # Exemplo de variável de ambiente
 
 volumes:
-  meu-novo-db-volume:
+  postgress:
