--- a/docker-compose postgress.yml
+++ b/docker-compose postgress.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: dbcatclubsystem
       POSTGRES_USER: catclubsystem
-      POSTGRES_PASSWORD: 2010mainecoon2010
+      POSTGRES_PASSWORD: teste
     ports:
       - "5432:5432"
     volumes:
