--- a/config.local.yaml
+++ b/config.local.yaml
@@ -9,8 +9,8 @@ server:
   port: 8080
   host: http://localhost:8080
 aws:
-  S3AwsAccessKeyId: AKIAVRUVP7BCRAJZLKOT
-  S3AwsSecretAccessKey: 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
+  S3AwsAccessKeyId: 
+  S3AwsSecretAccessKey: 
   bucket: amacoondocs
 smtp:
   host: smtp.kinghost.net
