--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: amacoonservicesccount  # Nome do Service Account
       containers:
       - name: amacconservice
-        image: 381491869765.dkr.ecr.sa-east-1.amazonaws.com/amacconservice:latest
+        image: 381491869765.dkr.ecr.sa-east-1.amazonaws.com/catclubsystem:latest
         
         ports:
         - containerPort: 8080
