--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -28,15 +28,20 @@ jobs:
         run: |
           echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
           echo "IMAGE_REPO=catclubsystem" >> $GITHUB_ENV
-          echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+          APP_NAME=amacconservice
+          COMMIT_HASH=$(echo ${{ github.sha }} | cut -c1-7) # Primeiros 7 caracteres da hash do commit
+          IMAGE_TAG=${APP_NAME}-${COMMIT_HASH}
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
       
       - name: Build and tag Docker image
         run: docker build -t ${{ env.ECR_REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }} .
               
       - name: Push Docker image to ECR
         run: docker push ${{ env.ECR_REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
-      
-      # Passos subsequentes permanecem iguais
+
+      - name: Set image tag in Kubernetes deployment
+        run: |
+          sed -i "s|image: \${ECR_REGISTRY}/\${IMAGE_REPO}/amacconservice:IMAGE_TAG_PLACEHOLDER|image: \${ECR_REGISTRY}/\${IMAGE_REPO}/amacconservice:\${IMAGE_TAG}|g" k8s/deployment.yaml
 
       - name: Install kubectl
         run: |
