--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,10 +13,22 @@ spec:
       labels:
         app: amacconservice
     spec:
-      serviceAccountName: amacoonservicesccount  # Nome do Service Account
+      serviceAccountName: amacoonservicesccount
       containers:
       - name: amacconservice
-        image: 381491869765.dkr.ecr.sa-east-1.amazonaws.com/catclubsystem:latest
-        
+        image: 381491869765.dkr.ecr.sa-east-1.amazonaws.com/catclubsystem/amacconservice:IMAGE_TAG_PLACEHOLDER
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "1000m"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 5
