--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Set image tag in Kubernetes deployment
         run: |
-         sed -i "s|image: .*/catclubsystem/amacconservice-.*|image: ${ECR_REGISTRY}/${IMAGE_REPO}/${IMAGE_TAG}|g" k8s/deployment.yaml
+         sed -i "s|image: \(.*/catclubsystem/\)amacconservice-.*|image: \1${IMAGE_REPO}/${IMAGE_TAG}|g" k8s/deployment.yaml
 
 
 
