--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -41,10 +41,8 @@ jobs:
 
       - name: Set image tag in Kubernetes deployment
         run: |
-         sed -i "s|image: \(.*/catclubsystem/\)amacconservice-.*|image: \1${IMAGE_REPO}/${IMAGE_TAG}|g" k8s/deployment.yaml
-
-
-
+          sed -i "s|image: .*\/catclubsystem\/amacconservice:.*|image: ${{ env.ECR_REGISTRY }}/catclubsystem/amacconservice:${{ env.IMAGE_TAG }}|g" k8s/deployment.yaml
+      
       # Debug: Print IMAGE_TAG
       - name: Debug IMAGE_TAG
         run: echo "IMAGE_TAG=${IMAGE_TAG}"
