--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Set image tag in Kubernetes deployment
         run: |
-          sed -i "s|image: .*\/catclubsystem\/amacconservice:.*|image: ${{ env.ECR_REGISTRY }}/catclubsystem/amacconservice:${{ env.IMAGE_TAG }}|g" k8s/deployment.yaml
+          sed -i "s|IMAGE_TAG_PLACEHOLDER|${{ env.IMAGE_TAG }}|g" k8s/deployment.yaml
       
       # Debug: Print IMAGE_TAG
       - name: Debug IMAGE_TAG
