--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -41,8 +41,7 @@ jobs:
 
       - name: Set image tag in Kubernetes deployment
         run: |
-          awk -v tag="${{ env.IMAGE_TAG }}" '{gsub("IMAGE_TAG_PLACEHOLDER", tag); print}' k8s/deployment.yaml > temp.yaml && mv temp.yaml k8s/deployment.yaml
-      
+          sed -i "s|IMAGE_URL_PLACEHOLDER|${{ env.ECR_REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}|g" k8s/deployment.yaml
       
       
       # Debug: Print IMAGE_TAG
