--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: amacoonservicesccount
       containers:
       - name: amacconservice
-        image: 381491869765.dkr.ecr.sa-east-1.amazonaws.com/catclubsystem/amacconservice:IMAGE_TAG_PLACEHOLDER
+        image: IMAGE_URL_PLACEHOLDER
         ports:
         - containerPort: 8080
         resources:
