--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ SMTP_HOST=smtp.kinghost.net
 SMTP_PORT=587
 SMTP_USERNAME=sistema@catclubsystem.com
 SMTP_PASSWORD=Sistema@0013
-DB_USERNAME=your_db_username
-DB_PASSWORD=your_db_password
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=your_database_name
+DB_USERNAME=postgres
+DB_PASSWORD=TujHeNqpXEMwLyacAudqGhixSIdcvuda
+DB_HOST=junction.proxy.rlwy.net:20726
+DB_PORT=5432
+DB_NAME=railway
