--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ SMTP_USERNAME=sistema@catclubsystem.com
 SMTP_PASSWORD=Sistema@0013
 DB_USERNAME=postgres
 DB_PASSWORD=TujHeNqpXEMwLyacAudqGhixSIdcvuda
-DB_HOST=junction.proxy.rlwy.net:20726
-DB_PORT=5432
+DB_HOST=junction.proxy.rlwy.net
+DB_PORT=20726
 DB_NAME=railway
