--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVER_PORT=8080
-AWS_REGION=sa-east-1
-AWS_ACCESSKEYID=your_aws_access_key_id
-AWS_SECRETACCESSKEY=your_aws_secret_access_key
+AWS_REGION=us-east-2
+AWS_ACCESSKEYID=xxxx
+AWS_SECRETACCESSKEY=xxxx
 AWS_BUCKET=amacoondocs
 SMTP_HOST=smtp.kinghost.net
 SMTP_PORT=587
